22-05-2013 4.1.70
- Template parser will not see {tag} with white spaces between { and } as tag to be replaced.
- The HTML email message CSS part will add style with new line characters to disable tag parsing
- Show maximum upload size.
- Reverted file thumbnail view by default
- Sales per month report for billing products
- Required custom fields are not validated server side to prevent errors when 
  hiding custom fields in the interface
- Don't use store reload but load to prevent delete to repeat after editing a rule
- Disappearing file panel bug

17-05-2013 4.1.69
- Updated Norwegian
- Fix for "This is not a recurring event" error
- Added default sort to the select document template grid and enabled name column sort

17-05-2013 4.1.68
- Demo data for linked e-mails
- Keep contact and users in sync
- Select first e-mail template as default for new users
- Possible to export tickets without manage permission on the ticket module
- ImageViewer does not resize image when clicking "Normal size".

16-05-2013 4.1.67
- Added demo data module so new users can have a better first experience.
- Remember state of several grids in the Email Composer's Address Book dialog.
- Added SortableDataView object so a dataview can be sorted
- Fix for IMAP servers that dont support utf8
- Changed default event organizer. The default is the calendar owner except if 
  the owner is admin. In that case it will default to the logged in user.

14-05-2013 4.1.66
- Only first 30 bookmarks shown
- Don't delete types with projects
- Show all document templates
- Custom fields not saving if you had an invalid number
- Remember size state of east panel in Files module across user sessions.
- Remember size state of west panel in Address Book module across user sessions.
- Fixed scroll behaviour in files tree
- Removed old admin only grid column from groups

13-05-2013 4.1.65
- Optimzed SQL query to lookup e-mail addresses.
- Support foreign characters in ZIP files.