@@ -254,3 +254,5 @@ $l['cronEmailReminders']='Email reminders';
 $l['cronEmailRemindersDescription']='This cron handles the email reminders';
 
 $l['appointementAlreadyProcessed']='This message contains an appointment invitation that was already processed.';
+
+$l['noname'] = 'noname';
